--- a/notebooks/alg_test.ipynb
+++ b/notebooks/alg_test.ipynb
@@ -68,8 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create iterables for packet rate and variance\n",
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -138,8 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Generate data list that includes all data in a list per frames\n",
@@ -166,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -180,8 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# We start with the KNeighbors Classifier\n",
@@ -197,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -217,12 +223,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99819999999999998, 0.99819999999999998, 0.99809999999999999, 0.99660000000000004]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# testing training in a loop\n",
+    "knn_list = []\n",
+    "predictions = []\n",
+    "accs = []\n",
+    "n_neighbors = [2, 4, 10, 50]\n",
+    "for n in range(len(n_neighbors)):\n",
+    "    knn_list.append(KNeighborsClassifier(n_neighbors=n_neighbors[n]))\n",
+    "    knn_list[n].fit(X_train, y_train)\n",
+    "    predictions.append(knn_list[n].predict(X_test))\n",
+    "    accs.append(accuracy_score(y_test, predictions[n]))\n",
+    "\n",
+    "print(accs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n",
+      "100\n",
+      "1000\n",
+      "10000\n",
+      "100000\n",
+      "[0.99050000000000005, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003]\n",
+      "[13.882, 14.815, 14.219, 14.727, 13.764, 14.338]\n",
+      "[1.559, 1.497, 1.48, 1.506, 1.536, 1.562]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Training in a loop using SVM\n",
+    "# http://scikit-learn.org/stable/modules/svm.html\n",
+    "from sklearn.svm import SVC\n",
+    "from time import time\n",
+    "svc_list = []\n",
+    "svc_pred = []\n",
+    "svc_accs = []\n",
+    "svc_fit_times = []\n",
+    "svc_pred_times = []\n",
+    "svc_complexities = [1, 10, 100, 1000, 10000, 100000]\n",
+    "\n",
+    "for n in range(len(svc_complexities)):\n",
+    "    svc_list.append(SVC(kernel='rbf', C=float(svc_complexities[n])))\n",
+    "    t0 = time()\n",
+    "    svc_list[n].fit(X_train, y_train)\n",
+    "    svc_fit_times.append(round(time() - t0, 3))\n",
+    "    t0 = time()\n",
+    "    svc_pred.append(svc_list[n].predict(X_test))\n",
+    "    svc_pred_times.append(round(time() - t0, 3))\n",
+    "    svc_accs.append(accuracy_score(y_test, svc_pred[n]))\n",
+    "    \n",
+    "print(svc_accs)\n",
+    "print(svc_fit_times)\n",
+    "print(svc_pred_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "\n",
     "# TODO: http://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html"
    ]
   }
