--- a/notebooks/draft.ipynb
+++ b/notebooks/draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -232,11 +232,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cell': {'cm_config': {'lineNumbers': True}},\n",
+       " 'CodeCell': {'cm_config': {'autoCloseBrackets': False}},\n",
+       " 'load_extensions': {'contrib_nbextensions_help_item/main': True,\n",
+       "  'hinterland/hinterland': True,\n",
+       "  'nbextensions_configurator/config_menu/main': True,\n",
+       "  'ruler/main': True,\n",
+       "  'vim_binding/vim_binding': True}}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this in Python once, it should take effect permanently\n",
     "from notebook.services.config import ConfigManager\n",
@@ -246,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -273,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -320,9 +335,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4000\n",
+      "[(1, 4), (2, 5), (3, 6)]\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
    "source": [
     "# DEBUG\n",
     "test = list(filter(lambda x: x == 3, labels))\n",
@@ -337,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -348,17 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.35840458, -1.0, -1.0, 5.0048642]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate data list that includes all data in a list per frames\n",
     "data = list(if_vector)\n",
@@ -378,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -389,8 +406,7 @@
       "[2.0014811, 2.0032263, 2.0032263, 2.0014811] 1742.28 0.128564\n",
       "40000 40000\n",
       "3\n",
-      "40000\n",
-      "(40000, 3)\n"
+      "40000\n"
      ]
     }
    ],
@@ -401,8 +417,7 @@
     "print(len(data), len(labels))\n",
     "print(len(data[0]))\n",
     "what = list(filter(lambda x: len(x) == 3, data))\n",
-    "print(len(what))\n",
-    "print(that.shape)"
+    "print(len(what))"
    ]
   },
   {
@@ -416,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -433,15 +448,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40000,)\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'that' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-a2dee3e2a845>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthaat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthaat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m X_train, X_test, y_train, y_test = train_test_split(\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'that' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# START\n",
     "# Try\n",
-    "that = np.array(list(data), dtype=np.float)\n",
+    "# that = np.array(list(data), dtype=np.float)\n",
     "thaat = np.array(list(labels), dtype=np.float)\n",
-    "np.array(list(X_train), dtype=np.float)\n",
+    "# np.array(list(X_train), dtype=np.float)\n",
     "print(thaat.shape)\n",
     "print(type(thaat))\n",
     "print(type(that))\n",
@@ -452,22 +487,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'flattened' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-43-61fc5cfcbaf3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m X_train, X_test, y_train, y_test = train_test_split(\n\u001b[0;32m----> 5\u001b[0;31m     flattened, labels, random_state=0)\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'flattened' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "print(X_train.shape)\n",
-    "print(y_train.shape)\n",
-    "print(\"target:\\n{}\".format(y_train[:150"
+    "# START\n",
+    "# Try\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    flattened, labels, random_state=0)\n",
+    "print(X_train[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-ff3369eac037>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Use pandas to generate a datafram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'interframe delays'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'packet_rate'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'interframe delay variance'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mlearn_dataframe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m scatter_matrix = pd.plotting.scatter_matrix(learn_dataframe, c=y_train, figsize=(15, 15),\n\u001b[1;32m      6\u001b[0m                                    marker='o')\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create a scatter matrix from the datagrame, color by y_train\n",
     "# Use pandas to generate a datafram\n",
@@ -492,7 +552,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(len(packet_rate_scn[9]))"
@@ -501,7 +563,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -565,9 +629,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([-0.35840458, -1.0, -1.0, 5.0034418], 992.93335, 0.12848413)\n",
+      "<class 'list'>\n",
+      "[-0.35840458, -1.0, -1.0, 5.0048642]\n"
+     ]
+    }
+   ],
    "source": [
     "# So, apparently (im guessing), scikit learn hates nested lists, and I thought\n",
     "# they were a good idea. So I'm going to flatten the data list but I will \n",
@@ -583,14 +657,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.35840458, -1.0, -1.0, 5.0048642, 2122.9348, 0.12846743, 2122.9348, 0.12846743]\n"
+      "[-0.35840458, -1.0, -1.0, 5.0048642]\n"
      ]
     }
    ],
@@ -604,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -663,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +796,7 @@
        "           weights='uniform')"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,19 +809,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'sklearn.neighbors.classification.KNeighborsClassifier'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(type(knn))"
    ]
@@ -763,11 +829,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-56-dc68fec63b34>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-dc68fec63b34>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    tree.fit(\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
@@ -777,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -788,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -843,11 +916,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "10\n",
+      "100\n",
+      "1000\n",
+      "10000\n",
+      "100000\n",
+      "[0.99050000000000005, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003]\n"
+     ]
+    }
+   ],
    "source": [
     "# Training in a loop using SVM\n",
     "# http://scikit-learn.org/stable/modules/svm.html\n",
@@ -855,8 +940,57 @@
     "svc_list = []\n",
     "svc_pred = []\n",
     "svc_accs = []\n",
-    "svc_gammas = "
+    "svc_complexities = [1, 10, 100, 1000, 10000, 100000]\n",
+    "\n",
+    "for n in range(len(svc_complexities)):\n",
+    "    print(svc_complexities[n])\n",
+    "    svc_list.append(SVC(kernel='rbf', C=float(svc_complexities[n])))\n",
+    "    svc_list[n].fit(X_train, y_train)\n",
+    "    svc_pred.append(svc_list[n].predict(X_test))\n",
+    "    svc_accs.append(accuracy_score(y_test, svc_pred[n]))\n",
+    "    \n",
+    "print(svc_accs)\n",
+    "                    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from time import time\n",
+    "\n",
+    "rfc_list = []\n",
+    "rfc_pred = []\n",
+    "rfc_accs = []\n",
+    "rfc_estimators = [1, 10, 100, 1000, 10000, 100000]\n",
+    "rfc_jobs = [1, 2, 3]\n",
+    "rfc_fit_times = [[] for i in range(len(rfc_jobs))]\n",
+    "rfc_pred_times = [[] for i in range(len(rfc_jobs))]\n",
+    "\n",
+    "for job in range(len(rfc_jobs)):\n",
+    "    for n in range(len(rfc_estimators)):\n",
+    "        rfc_list.append(RandomForestClassifier(n_estimators=rfc_estimators[n],\n",
+    "                                              n_jobs=rfc_jobs[job]))\n",
+    "        t0 = time()\n",
+    "        rfc_list[n].fit(X_train, y_train)\n",
+    "        rfc_fit_times[job].append(round(time() - t0, 3))\n",
+    "        t0 = time()\n",
+    "        rfc_pred.append(svc_list[n].predict(X_test))\n",
+    "        rfc_pred_times[job].append(round(time() - t0, 3))\n",
+    "        rfc_accs.append(accuracy_score(y_test, svc_pred[n]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
