--- a/notebooks/first_data_set.ipynb
+++ b/notebooks/first_data_set.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Version: 3.5.3 (default, May 10 2017, 15:05:55) \n",
+      "[GCC 6.3.1 20161221 (Red Hat 6.3.1-1)]\n",
+      "Pandas Version: 0.20.1\n",
+      "matplotlib Version: 2.0.2\n",
+      "NumPy Version: 1.12.1\n",
+      "SciPy Version: 0.19.0\n",
+      "IPython Version: 6.0.0\n",
+      "Scikit-learn Version: 0.18.1\n",
+      "graphviz Version: 0.7.1\n",
+      "Mglearn Version: 0.1.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Required modules\n",
     "import scipy as sp\n",
@@ -33,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -154,10 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save the recorded data in variables                                           \n",
@@ -169,7 +182,7 @@
     "                                dtype=sp.float32)                   \n",
     "test_if_time_ch3_scn_0 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_3_scn_0.dat\"),\n",
     "                                dtype=sp.float32)                   \n",
-    "test_if_time_ch4_scn_0 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch4_scn_0.dat\"),\n",
+    "test_if_time_ch4_scn_0 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_4_scn_0.dat\"),\n",
     "                                dtype=sp.float32)\n",
     "# Packet rate                                                                   \n",
     "test_packet_rate_scn_0 = sp.fromfile(open(\"../../data/feature_extraction/2/packet_rate_scn_0.dat\"), dtype=sp.float32)\n",
@@ -197,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -212,7 +225,7 @@
     "                                dtype=sp.float32)                   \n",
     "test_if_time_ch3_scn_1 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_3_scn_1.dat\"),\n",
     "                                dtype=sp.float32)                   \n",
-    "test_if_time_ch4_scn_1 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch4_scn_1.dat\"),\n",
+    "test_if_time_ch4_scn_1 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_4_scn_1.dat\"),\n",
     "                                dtype=sp.float32)\n",
     "# Packet rate                                                                   \n",
     "test_packet_rate_scn_1 = sp.fromfile(open(\"../../data/feature_extraction/2/packet_rate_scn_1.dat\"), dtype=sp.float32)\n",
