--- a/notebooks/draft.ipynb
+++ b/notebooks/draft.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Version: 3.5.3 (default, May 10 2017, 15:05:55) \n",
-      "[GCC 6.3.1 20161221 (Red Hat 6.3.1-1)]\n",
-      "Pandas Version: 0.20.1\n",
+      "Python Version: 3.6.2 | packaged by conda-forge | (default, Jul 23 2017, 22:59:30) \n",
+      "[GCC 4.8.2 20140120 (Red Hat 4.8.2-15)]\n",
+      "Pandas Version: 0.20.3\n",
       "matplotlib Version: 2.0.2\n",
-      "NumPy Version: 1.12.1\n",
-      "SciPy Version: 0.19.0\n",
-      "IPython Version: 6.0.0\n",
-      "Scikit-learn Version: 0.18.1\n",
-      "graphviz Version: 0.7.1\n",
-      "Mglearn Version: 0.1.5\n"
+      "NumPy Version: 1.13.1\n",
+      "SciPy Version: 0.19.1\n",
+      "IPython Version: 6.1.0\n",
+      "Scikit-learn Version: 0.18.2\n",
+      "graphviz Version: 0.5.2\n"
      ]
     }
    ],
@@ -32,7 +31,7 @@
     "import IPython\n",
     "import sklearn\n",
     "import graphviz\n",
-    "import mglearn\n",
+    "# import mglearn\n",
     "import sys\n",
     "\n",
     "print(\"Python Version: {}\".format(sys.version))\n",
@@ -43,7 +42,7 @@
     "print(\"IPython Version: {}\".format(IPython.__version__))\n",
     "print(\"Scikit-learn Version: {}\".format(sklearn.__version__))\n",
     "print(\"graphviz Version: {}\".format(graphviz.__version__))\n",
-    "print(\"Mglearn Version: {}\".format(mglearn.__version__))"
+    "# print(\"Mglearn Version: {}\".format(mglearn.__version__))"
    ]
   },
   {
@@ -374,7 +373,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Generate data list that includes all data in a list per frames\n",
@@ -811,6 +812,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -881,7 +883,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# testing training in a loop\n",
@@ -955,8 +959,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -985,17 +991,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99050000000000005, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99050000000000005, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99050000000000005, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003, 0.99170000000000003] \n",
+      " [[0.053, 0.177, 1.426, 13.83, 143.471, 1384.964], [0.047, 0.169, 1.419, 13.664, 136.452, 1409.797], [0.047, 0.165, 1.389, 13.685, 137.151, 1407.944]] \n",
+      " [[1.479, 1.444, 1.475, 1.457, 1.534, 1.439], [1.484, 1.449, 1.446, 1.451, 1.436, 1.448], [1.468, 1.445, 1.444, 1.444, 1.446, 1.453]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rfc_accs, '\\n', rfc_fit_times, '\\n', rfc_pred_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn impor"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1009,7 +1037,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
