--- a/notebooks/first_data_set.ipynb
+++ b/notebooks/first_data_set.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python Version: 3.5.3 (default, May 10 2017, 15:05:55) \n",
-      "[GCC 6.3.1 20161221 (Red Hat 6.3.1-1)]\n",
-      "Pandas Version: 0.20.1\n",
+      "Python Version: 3.6.2 | packaged by conda-forge | (default, Jul 23 2017, 22:59:30) \n",
+      "[GCC 4.8.2 20140120 (Red Hat 4.8.2-15)]\n",
+      "Pandas Version: 0.20.3\n",
       "matplotlib Version: 2.0.2\n",
-      "NumPy Version: 1.12.1\n",
-      "SciPy Version: 0.19.0\n",
-      "IPython Version: 6.0.0\n",
-      "Scikit-learn Version: 0.18.1\n",
-      "graphviz Version: 0.7.1\n",
-      "Mglearn Version: 0.1.5\n"
+      "NumPy Version: 1.13.1\n",
+      "SciPy Version: 0.19.1\n",
+      "IPython Version: 6.1.0\n",
+      "Scikit-learn Version: 0.18.2\n",
+      "graphviz Version: 0.5.2\n"
      ]
     }
    ],
@@ -32,7 +31,6 @@
     "import IPython\n",
     "import sklearn\n",
     "import graphviz\n",
-    "import mglearn\n",
     "import sys\n",
     "\n",
     "print(\"Python Version: {}\".format(sys.version))\n",
@@ -42,8 +40,7 @@
     "print(\"SciPy Version: {}\".format(sp.__version__))\n",
     "print(\"IPython Version: {}\".format(IPython.__version__))\n",
     "print(\"Scikit-learn Version: {}\".format(sklearn.__version__))\n",
-    "print(\"graphviz Version: {}\".format(graphviz.__version__))\n",
-    "print(\"Mglearn Version: {}\".format(mglearn.__version__))"
+    "print(\"graphviz Version: {}\".format(graphviz.__version__))"
    ]
   },
   {
@@ -255,27 +252,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape:  4280\n"
+     ]
+    }
+   ],
    "source": [
     "# save the recorded data in variables                                           \n",
     "# interframe time per channel\n",
     "# Scenario 0\n",
-    "test_if_time_ch1_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_1_scn_2.dat\"),\n",
+    "test_if_time_ch1_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/with_dc/SNR_0/interframe_time_ch_1_scn_2.dat\"),\n",
     "                                dtype=sp.float32)                   \n",
-    "test_if_time_ch2_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_2_scn_2.dat\"),\n",
-    "                                dtype=sp.float32)                   \n",
-    "test_if_time_ch3_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_3_scn_2.dat\"),\n",
-    "                                dtype=sp.float32)                   \n",
-    "test_if_time_ch4_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch4_scn_2.dat\"),\n",
-    "                                dtype=sp.float32)\n",
+    "print(\"Shape: \", test_if_time_ch1_scn_2.shape[0])\n",
+    "\n",
+    "# test_if_time_ch2_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_2_scn_2.dat\"),\n",
+    "#                                 dtype=sp.float32)                   \n",
+    "# test_if_time_ch3_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch_3_scn_2.dat\"),\n",
+    "#                                 dtype=sp.float32)                   \n",
+    "# test_if_time_ch4_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/interframe_time_ch4_scn_2.dat\"),\n",
+    "#                                 dtype=sp.float32)\n",
     "# Packet rate                                                                   \n",
-    "test_packet_rate_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/packet_rate_scn_2.dat\"), dtype=sp.float32)\n",
+    "# test_packet_rate_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/packet_rate_scn_2.dat\"), dtype=sp.float32)\n",
     "# Variance inter frame delay                                                    \n",
-    "test_variance_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/variance_scn_2.dat\"), dtype=sp.float32)"
+    "# test_variance_scn_2 = sp.fromfile(open(\"../../data/feature_extraction/2/variance_scn_2.dat\"), dtype=sp.float32)"
    ]
   },
   {
